kubernetes/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog-frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog-frontend
  template:
    metadata:
      labels:
        app: blog-frontend
    spec:
      containers:
        - name: blog-frontend
          image: saykot/blog-frontend:1.0.1
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: blog-frontend-srv
spec:
  selector:
    app: blog-frontend
  ports:
    - port: 3000
      targetPort: 3000
