kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blog-ingress
spec:
  rules:
    - host: saykotblog.io
      http:
        paths:
          - path: "/api"
            pathType: Prefix
            backend:
              service:
                name: blog-backend-srv
                port:
                  number: 5000
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: blog-frontend-srv
                port:
                  number: 3000
